--- a/app/src/main/res/layout/top_fragment.xml
+++ b/app/src/main/res/layout/top_fragment.xml
@@ -3,10 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
 
         <LinearLayout
             android:id="@+id/character"
@@ -42,7 +46,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:text="1"
-                android:hint="Level"/>
+                android:hint="lvl"/>
 
             <EditText
                 android:id="@+id/exptext"
@@ -63,7 +67,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 android:text="2"
-                android:hint="Proficiency"/>
+                android:hint="prof" />
         </LinearLayout>
 
         <TableLayout
@@ -111,19 +115,46 @@
                 android:layout_width="match_parent"
                 android:layout_weight="2">
 
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1">
+
                 <EditText
                     android:id="@+id/hptext"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="number"
                     android:text="0"
+                    android:hint="HP"
                     android:textAlignment="center" />
+
+                 <TextView
+                     android:layout_width="0dp"
+                     android:layout_height="match_parent"
+                     android:layout_weight=".2"
+                     android:text="/"
+                     android:gravity="center"
+                     android:textSize="18sp"/>
+
+                    <EditText
+                        android:id="@+id/hpmax"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:inputType="number"
+                        android:text="0"
+                        android:hint="Maxhp"
+                        android:textAlignment="center" />
+
+                </LinearLayout>
 
                 <EditText
                     android:id="@+id/actext"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:ems="10"
@@ -133,7 +164,7 @@
 
                 <EditText
                     android:id="@+id/inittext"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:ems="10"
@@ -143,7 +174,7 @@
 
                 <EditText
                     android:id="@+id/speedtext"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:ems="10"
