Working on Saving. Top_Fragment is saving using shared preference

--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -18,23 +18,30 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:text="Save"
+                android:onClick="save"
                 android:id="@+id/Save"/>
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight=".5"
+                android:layout_weight="1"
                 android:text="Clear"
                 android:textSize="12sp"
                 android:id="@+id/Clear"/>
-
             <Button
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Load"
+                android:text="Delete"
+                android:textSize="12sp"
+                android:id="@+id/Delete"/>
+
+            <Spinner
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:id="@+id/Load"/>
 
-
+j
         </LinearLayout>
 
            <fragment
@@ -42,7 +49,7 @@
                 class="com.example.manam.dnd.Top_Fragment"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_weight="2" />
+                android:layout_weight="1.5" />
 
             <android.support.v4.view.ViewPager
                 android:id="@+id/viewpager"
