--- a/app/src/main/res/layout/notes.xml
+++ b/app/src/main/res/layout/notes.xml
@@ -9,14 +9,15 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/editText"
+            android:id="@+id/notes"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="5"
             android:layout_below="@+id/charstats"
             android:ems="10"
             android:inputType="textMultiLine"
-            android:text="this is where notes go so if there are too many I will have to figure something else out cause that will look like shit if there are not enough of them to go around when needed" />
+            android:gravity="top"
+            android:hint="Notes" />
     </LinearLayout>
 
 </RelativeLayout>
