--- a/app/src/main/res/layout/top_fragment.xml
+++ b/app/src/main/res/layout/top_fragment.xml
@@ -16,26 +16,34 @@
             android:id="@+id/character"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:orientation="horizontal">
 
-            <EditText
-                android:id="@+id/nametext"
+            <android.support.design.widget.TextInputLayout
+                android:layout_height="wrap_content"
                 android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Name"
-                android:inputType="textPersonName" />
+                android:layout_weight="1">
+                <EditText
+                    android:id="@+id/nametext"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="Name"
+                    android:inputType="textPersonName" />
+            </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1">
             <EditText
                 android:id="@+id/classtext"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:ems="10"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="8"
                 android:inputType="textShortMessage"
                 android:hint="Class" />
+            </android.support.design.widget.TextInputLayout>
 
             <TextView
                 android:id="@+id/leveltext"
@@ -45,36 +53,47 @@
                 android:gravity="center"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:text="1"
+                android:text=""
                 android:hint="lvl"/>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_gravity="center">
             <EditText
                 android:id="@+id/exptext"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:ems="10"
-                android:hint="Experience"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="8"
+                android:hint="EXP"
+                android:text="0"
                 android:inputType="number"
                 android:textAlignment="center" />
+            </android.support.design.widget.TextInputLayout>
 
+            <android.support.design.widget.TextInputLayout
+                android:layout_height="match_parent"
+                android:layout_width="0dp"
+                android:layout_weight="1">
             <TextView
                 android:id="@+id/proftext"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight=".5"
                 android:gravity="center"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:text="2"
-                android:hint="prof" />
+                android:text=""
+                android:hint="profficiency" />
+            </android.support.design.widget.TextInputLayout>
         </LinearLayout>
 
         <TableLayout
             android:id="@+id/charstats"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="1.5"
+            android:layout_weight="2"
             android:layout_below="@+id/character">
 
             <TableRow
@@ -129,7 +148,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="number"
-                    android:text="0"
+                    android:text=""
                     android:hint="HP"
                     android:textAlignment="center" />
 
@@ -148,7 +167,7 @@
                         android:layout_weight="1"
                         android:ems="10"
                         android:inputType="number"
-                        android:text="0"
+                        android:text=""
                         android:hint="Maxhp"
                         android:textAlignment="center" />
 
@@ -161,7 +180,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="number"
-                    android:text="10"
+                    android:text=""
                     android:textAlignment="center"
                     android:hint="AC"/>
 
@@ -172,7 +191,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="numberSigned"
-                    android:text="+0"
+                    android:text=""
                     android:textAlignment="center"
                     android:hint="init"/>
 
@@ -183,7 +202,7 @@
                     android:layout_weight="1"
                     android:ems="10"
                     android:inputType="number"
-                    android:text="30"
+                    android:text=""
                     android:textAlignment="center"
                     android:hint="speed"/>
 
